--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 <div id="wrapper">
 	<div id="mask">
 		<div id="item1" class="item">
-			<a name="item1"></a>
+			<!-- <a name="item1"></a> -->
 			<div class="about-content">Hello I am Paige</div>
 		</div>
 
 		<div id="item2" class="item" class-"fullscreen-bg">
-			<a name="item2"></a>
+			<!-- <a name="item2"></a> -->
 			<div id="bg">
 				<video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
 					<source src="images/video.mp4" type="video/mp4">
@@ -41,7 +41,18 @@
 		</div>
 
 		<div id="item3" class="item">
-			<a name="item3"></a>
+			<div id="item4" class="work work1 inner-item">
+				<a href="#item5" class="panel">next</a>
+			</div>
+
+			<div id="item5" class="work work2 inner-item">
+				<a href="#item6" class="panel">next</a>
+			</div>
+
+			<div id="item6" class="work work3 inner-item">
+				<a href="#item3" class="panel">top</a>
+			</div>
+			<!-- <a name="item3"></a> -->
 		</div>
 
 	</div>
