--- a/index.html
+++ b/index.html
@@ -1,62 +1,64 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
-	"http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Paige Ormiston</title>
-
-<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-<script type="text/javascript" src="js/jquery-1.3.1.min.js"></script>
-<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="js/jquery.easing.compatibility"></script>
-<script type="text/javascript" src="js/jquery.scrollTo.js"></script>
-<script type="text/javascript" src="scripts/slides.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-<script> new WOW().init();</script>
-
-
+	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	<script type="text/javascript" src="js/jquery-1.3.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="js/jquery.easing.compatibility"></script>
+	<script type="text/javascript" src="js/jquery.scrollTo.js"></script>
+	<script type="text/javascript" src="scripts/slides.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+	<script> new WOW().init();</script>
 </head>
+
 <body>
-<div id="header" class="wow fadeInDown box" style="visibility:visible; animation-name:fadeInDown;">
-	<div id="aboutbutton"><a href="#item1" class="panel"><div class="navlink">ABOUT</div></a></div>
-	<a href="#item2" class="panel"><img src="images/p-logo.svg"></a>
-	<div id="workbutton"><a href="#item3" class="panel"><div class="navlink">WORK</div></a></div>
-</div>
-
-<div id="wrapper">
-	<div id="mask">
-		<div id="item1" class="item">
-			<!-- <a name="item1"></a> -->
-			<div class="about-content">Hello I am Paige</div>
-		</div>
-
-		<div id="item2" class="item" class-"fullscreen-bg">
-			<!-- <a name="item2"></a> -->
-			<div id="bg">
-				<video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
-					<source src="images/video.mp4" type="video/mp4">
-				</video>
-			</div>
-		</div>
-
-		<div id="item3" class="item">
-			<div id="item4" class="work work1 inner-item">
-				<a href="#item5" class="panel">next</a>
-			</div>
-
-			<div id="item5" class="work work2 inner-item">
-				<a href="#item6" class="panel">next</a>
-			</div>
-
-			<div id="item6" class="work work3 inner-item">
-				<a href="#item3" class="panel">top</a>
-			</div>
-			<!-- <a name="item3"></a> -->
-		</div>
-
+	<div id="header" class="wow fadeInDown box" style="visibility:visible; animation-name:fadeInDown;">
+		<div id="aboutbutton"><a href="#item1" class="panel"><div class="navlink">ABOUT</div></a></div>
+		<a href="#item2" class="panel"><img src="images/p-logo.svg"></a>
+		<div id="workbutton"><a href="#item3" class="panel"><div class="navlink">WORK</div></a></div>
 	</div>
-</div>
 
+	<div id="header2">
+		<div id="aboutbutton2" class="remove"><a href="#item1" class="panel"><div class="navlink">ABOUT</div></a></div>
+		<a href="#item2" class="panel"><img src="images/p-logo.svg"></a>
+		<div id="workbutton2" class="remove"><a href="#item3" class="panel"><div class="navlink">WORK</div></a></div>
+	</div>
+
+	<div id="wrapper">
+		<div id="mask">
+			<div id="item1" class="item">
+				<!-- <a name="item1"></a> -->
+				<div class="about-content">Hello I am Paige</div>
+			</div>
+
+			<div id="item2" class="item" class-"fullscreen-bg">
+				<!-- <a name="item2"></a> -->
+				<div id="bg">
+					<video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
+						<source src="images/video.mp4" type="video/mp4">
+					</video>
+				</div>
+			</div>
+
+			<div id="item3" class="item">
+				<div id="item4" class="work work1 inner-item">
+					<a href="#item5" class="panel">next</a>
+				</div>
+
+				<div id="item5" class="work work2 inner-item">
+					<a href="#item6" class="panel">next</a>
+				</div>
+
+				<div id="item6" class="work work3 inner-item">
+					<a href="#item3" class="panel">top</a>
+				</div>
+				<!-- <a name="item3"></a> -->
+			</div>
+
+		</div>
+	</div>
 </body>
 </html>
