implemented nav circles

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
 		<div id="workbutton2" class="remove"><a href="#item3" class="panel"><div class="navlink">WORK</div></a></div>
 	</div>
 
+	<div id="nav-circles">
+		<div id="container">
+			<a href="#item3" class="panel"><div id="circle1" class="circle"></div></a>
+			<a href="#item5" class="panel"><div id="circle2" class="circle"></div></a>
+			<a href="#item6" class="panel"><div id="circle3" class="circle"></div></a>
+		</div>
+	</div>
+
 	<div id="wrapper">
 		<div id="mask">
 			<div id="item1" class="item">
