new work pages, myrge and able finished

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<script type="text/javascript" src="js/jquery.scrollTo.js"></script>
 	<script type="text/javascript" src="scripts/slides.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Cantarell:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600italic,700' rel='stylesheet' type='text/css'>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 	<script> new WOW().init();</script>
 </head>
@@ -29,17 +31,19 @@
 
 	<div id="nav-circles">
 		<div id="container">
-			<a href="#item3" class="panel"><div id="circle1" class="circle"></div></a>
-			<a href="#item5" class="panel"><div id="circle2" class="circle"></div></a>
-			<a href="#item6" class="panel"><div id="circle3" class="circle"></div></a>
+			<a href="#item3" class="panel"><div id="circle4" class="circle"></div></a>
+			<a href="#item5" class="panel"><div id="circle5" class="circle"></div></a>
+			<a href="#item6" class="panel"><div id="circle6" class="circle"></div></a>
 		</div>
 	</div>
+
+	<div class="nextarrow"><img id="next" class="next" src="images/arrow-d.svg"></div>
 
 	<div id="wrapper">
 		<div id="mask">
 			<div id="item1" class="item">
 				<!-- <a name="item1"></a> -->
-				<div class="about-content">Hello I am Paige</div>
+				<div class="about-content"></div>
 			</div>
 
 			<div id="item2" class="item" class-"fullscreen-bg">
@@ -52,13 +56,38 @@
 			</div>
 
 			<div id="item3" class="item">
+
 				<div id="item4" class="work work1 inner-item">
+					<div class="textarea">
+							<a class="worklink" href="myrge.html">
+								<div class="worktitle">Myrge <img class="lilarrow" src="images/arrow-r.svg"></div>
+							</a>
+							<div class="work-description">
+								Branding &middot; UX/UI &middot; Development
+							</div>
+					</div>
 				</div>
 
 				<div id="item5" class="work work2 inner-item">
+					<div class="textarea">
+							<a class="worklink" href="able.html">
+								<div class="worktitle">ABLE  <img class="lilarrow" src="images/arrow-r.svg"></div>
+							</a>
+							<div class="work-description">
+								Concept &middot; Branding &middot; Mobile UX/UI
+							</div>
+					</div>
 				</div>
 
 				<div id="item6" class="work work3 inner-item">
+					<div class="textarea">
+							<a class="worklink" href="unspo.html">
+								<div class="worktitle">UNSPO  <img class="lilarrow" src="images/arrow-r.svg"></div>
+							</a>
+							<div class="work-description">
+								Concept &middot; Branding &middot; Mobile UX/UI
+							</div>
+					</div>
 				</div>
 				<!-- <a name="item3"></a> -->
 			</div>
