hide arrow on video and about slides

--- a/index.html
+++ b/index.html
@@ -42,8 +42,16 @@
 	<div id="wrapper">
 		<div id="mask">
 			<div id="item1" class="item">
-				<!-- <a name="item1"></a> -->
-				<div class="about-content"></div>
+				<div class="textarea">
+						<div class="worktitle">About me</div>
+						<div class="work-description">
+							<a target="_blank" href="paige-ormiston-resume.pdf">Resume</a> &middot; <a target="_blank" href="https://www.linkedin.com/in/ormistonpaige">LinkedIn</a> &middot; <a target="_blank" href="https://github.com/Decision-Maker/sp">Github</a>
+						</div>
+						<div id="abouttext">
+							I'm a double-edged sword - designer and developer - that currently calls Bellingham, Washington my home. I'm passionate about making cool stuff that's both beautiful and usable on all digital platforms.
+							I earned a B.A. in Design and a B.S. in Computer Science from Western Washington University. With these backgrounds I am able to work efficiently and collaborate in both creative and technical teams to bridge the gap between design and development.
+						</div>
+				</div>
 			</div>
 
 			<div id="item2" class="item" class-"fullscreen-bg">
