--- a/myrge.html
+++ b/myrge.html
@@ -21,11 +21,11 @@
 <body>
 
   <div id="herowrapper">
-    <div id="hero" class="myrgeheader">
+		<div id="hero" class="myrgeheader">
       <div id="logoheader" class="wow fadeInDown box" style="visibility:visible; animation-name:fadeInDown;">
-        <div id="aboutbutton"><a href="index.html"><div class="navlink">BACK</div></a></div>
+        <div id="aboutbutton"><a href="index.html#item3"><div class="navlink">BACK</div></a></div>
         <a href="index.html"><img src="images/p-logo.svg"></a>
-        <div id="workbutton"><a href="index.html"><div class="navlink">NEXT</div></a></div>
+        <div id="workbutton"><a class="nextbutton" href="able.html"><div class="navlink nextbutton">NEXT</div></a></div>
       </div>
     </div>
     <div id="content">
