--- a/unspo.html
+++ b/unspo.html
@@ -3,19 +3,48 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Paige Ormiston</title>
-	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/work.css">
 	<script type="text/javascript" src="js/jquery-1.3.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.compatibility"></script>
+	<script type="text/javascript" src="js/jquery.scrollTo.js"></script>
+  <script type="text/javascript" src="scripts/hero.js"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Cantarell:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600italic,700' rel='stylesheet' type='text/css'>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <meta name="viewport" content="width=device-width" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 	<script> new WOW().init();</script>
 </head>
 
 <body>
-	<div id="header" class="wow fadeInDown box" style="visibility:visible; animation-name:fadeInDown;">
-		<a href="#item2" class="panel"><img src="images/p-logo.svg"></a>
-	</div>
+
+  <div id="herowrapper">
+		<div id="hero" class="unspoheader">
+      <div id="logoheader" class="wow fadeInDown box" style="visibility:visible; animation-name:fadeInDown;">
+        <div id="aboutbutton"><a href="index.html#item3"><div class="navlink">BACK</div></a></div>
+        <a href="index.html"><img src="images/p-logo.svg"></a>
+				<div id="workbutton"><a class="nextbutton" href="myrge.html"><div class="navlink nextbutton">NEXT</div></a></div>
+      </div>
+    </div>
+    <div id="content">
+      <div class="titlewrapper">
+        <div class="worktitle">UNSPO</div>
+        <div class="work-description">Concept &middot; Branding &middot; Mobile UX/UI</div>
+      </div>
+      <div class="worktext">
+				This app was created by me and Evan Donnelly as a solution to the dreadful feeling in everyone's daily routine that they have absolutely nothing to wear. Unspo uses your closet to find outfits inspired by clothes you already have. Users can purchase clothes they like, favorite and browse their looks, and view statistics about the clothes they currently have in their closet or outfits they have favorited.
+      </div>
+    </div>
+    <div class="img-container">
+			<img class="resize" src="images/unspo-logo.png">
+      <img class="resize" src="images/unspo-screens-1.png">
+      <img class="resize" src="images/unspo-screens-2.png">
+    </div>
+    <div id="footer">
+      <h3>&copy; Paige Ormiston</h3>
+    </div>
+  </div>
 </body>
 </html>
